# myKindaEngine

./: .gdbinit  CMakeLists.txt  README.md
Debug/: .gdb_history  .gdbinit  CMakeCache.txt  Makefile  cmake_install.cmake  gdb.exe - Ярлык.lnk  v_shader.glsl
src/: CubeAndSphere.cpp  FileRW.cpp  hello.cpp  hello2.cpp  main.cpp
src/Application/: main.cpp
src/Core/Application/: Application.h
